# gendern.jetzt

./: .flake8  .gitignore  .pre-commit-config.yaml
backend/: pyproject.toml
backend/app/: config.py.example  main.py  tagger_model.py  test_langtool.py
common/: .gitignore  auto_deg.py  auto_deg_re.py  example_corpus.txt  pyproject.toml  test.py  test.txt  test_tokenizer.py  tokenizer.py
corpus-pipeline/: README.md
corpus-pipeline/csv_edit/: export_csv.py  import_csv.py  pyproject.toml
corpus-pipeline/server/: .gitignore  config.py.example  db.py  pyproject.toml  server.py
corpus-pipeline/server/migrations/v0/: migrate.py  model.py
corpus-pipeline/server/migrations/v1/: model.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  site.webmanifest
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/components/: .EditorContainer.js.swp  EditorContainer.css  EditorContainer.js  Footer.css  Footer.js  Navbar.css  Navbar.js
frontend/src/pages/: About.js  Contact.js  Faq.js  Gendern.css  Gendern.js  Home.css  Home.js  Impressum.css  Impressum.js  Infos.js  Plugins.js  Privacy.js  Support.js
model/: .gitignore  README.md  config.py.example  download_corpus.py  pyproject.toml  split_corpus.py  test.sh  train_model.py
scrapers/: audimax.py  iz3w.py  pyproject.toml  run_all.sh  server_wordscraper.py  wordpress.py
scrapers/common/: config.example.py  nextcloud.py  pdf_extractor.py  pipeline.py  wordpress_scraper.py
scrapers/common/wordscraper/: test_doc.docx  test_doc_scraped.txt  test_wordscraper.py  wordscraper.py
