[tool.poetry]
name = "csv_edit"
version = "0.1.0"
description = ""
authors = ["Felix Kattner <kattnerf@hu-berlin.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
requests = "^2.27.0"
spacy = "^3.2.1"
de_core_news_sm = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.2.0/de_core_news_sm-3.2.0.tar.gz" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
