[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["pajowu <git@ca.pajowu.de>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
pony = "^0.7.14"
syntok = "^1.3.1"
html-text = "^0.5.2"
spacy = "3.2"
de_core_news_sm = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.2.0/de_core_news_sm-3.2.0.tar.gz" }
flair = "^0.10"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
pony-up = { git = "https://github.com/pajowu/pony_up.git" }
langdetect = "^1.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
